Fixing the spacing issue in MangeEvents.js

--- a/src/Components/ProjectManagement/ManageEvents/ManageEvents.css
+++ b/src/Components/ProjectManagement/ManageEvents/ManageEvents.css
@@ -1,10 +1,5 @@
-#ManageEventsContainer {
-  height: 100vh;
-  overflow-y: auto;
-}
-
 .dataGridTable {
-  height: 649px;
+  height: 700px;
 }
 
 button.NotificationBtn {
